elasticsearch-current.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"limits":{"cpu":"2","memory":"8Gi"},"requests":{"cpu":"1","memory":"4Gi"},"name":"elasticsearch"}]},"output":{"containers":[{"limits":{"cpu":"2","ephemeral-storage":"1Gi","memory":"8Gi"},"requests":{"cpu":"1","ephemeral-storage":"1Gi","memory":"4Gi"},"name":"elasticsearch"}]},"computeClassAtAdmission":"Default","modified":true}'
    autopilot.gke.io/warden-version: 33.30.0-gke.4
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app":"victory36-cybersecurity-simulation","component":"elasticsearch"},"name":"victory36-elasticsearch","namespace":"victory36"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"victory36-cybersecurity-simulation","component":"elasticsearch"}},"serviceName":"victory36-elasticsearch","template":{"metadata":{"labels":{"app":"victory36-cybersecurity-simulation","component":"elasticsearch"}},"spec":{"con [...]
  creationTimestamp: "2025-08-14T21:12:53Z"
  generation: 1
  labels:
    app: victory36-cybersecurity-simulation
    component: elasticsearch
  name: victory36-elasticsearch
  namespace: victory36
  resourceVersion: "1755209280882767003"
  uid: e071bc7a-76a0-481e-a7eb-eeb1eadda6e2
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: victory36-cybersecurity-simulation
      component: elasticsearch
  serviceName: victory36-elasticsearch
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: victory36-cybersecurity-simulation
        component: elasticsearch
    spec:
      containers:
      - env:
        - name: discovery.type
          value: single-node
        - name: ES_JAVA_OPTS
          value: -Xms2g -Xmx2g
        - name: xpack.security.enabled
          value: "true"
        - name: ELASTIC_PASSWORD
          value: Victory36ElasticSecure
        image: docker.elastic.co/elasticsearch/elasticsearch:8.8.0
        imagePullPolicy: IfNotPresent
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            ephemeral-storage: 1Gi
            memory: 8Gi
          requests:
            cpu: "1"
            ephemeral-storage: 1Gi
            memory: 4Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      name: elasticsearch-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Gi
      volumeMode: Filesystem
    status:
      phase: Pending
status:
  availableReplicas: 0
  collisionCount: 0
  currentReplicas: 1
  currentRevision: victory36-elasticsearch-7b75bcc665
  observedGeneration: 1
  replicas: 1
  updateRevision: victory36-elasticsearch-7b75bcc665
  updatedReplicas: 1
